--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,9 +42,9 @@ dependencies:
   flutter_bloc: ^9.1.1
   intl: ^0.18.1
   readmore: ^3.0.0
+  shared_preferences: ^2.5.3
   simple_animation_progress_bar: ^1.9.2
   simple_circular_progress_bar: ^1.0.2
-  
 
 dependency_overrides:
   intl: ^0.18.1
