--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  get: ^4.7.2
   intl: ^0.18.1
   readmore: ^3.0.0
   shared_preferences: ^2.5.3
